--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
         
     </section>
 
+    <footer>
+        <a id="anco" href="https://github.com/codeleoh/RegistrationScreen/tree/master">&copy; codeleoh</a>
+    </footer>
+
 </body>
 </html>
